fix text shift

--- a/src/theme/Toggle/styles.module.css
+++ b/src/theme/Toggle/styles.module.css
@@ -7,8 +7,10 @@
 
 .customToggleStyle {
   background-color: inherit;
-  border: none;
   cursor: pointer;
+  border: none;
+  max-width: 39px;
+  min-width: 39px;
 }
 
 .toggle {
